# ChangeLog for app-text/xml2doc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xml2doc/ChangeLog,v 1.25 2009/06/20 11:51:43 flameeyes Exp $

  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -xml2doc-20030510.ebuild:
  Remove old version.

  19 Jun 2009; Brent Baude <ranger@gentoo.org> xml2doc-20030510-r1.ebuild:
  stable ppc64, bug 272245

  11 Jun 2009; Raúl Porcel <armin76@gentoo.org> xml2doc-20030510-r1.ebuild:
  ia64/sparc stable wrt #272245

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  xml2doc-20030510-r1.ebuild:
  Stable on alpha, bug #272245

  06 Jun 2009; nixnut <nixnut@gentoo.org> xml2doc-20030510-r1.ebuild:
  ppc stable #272245

  03 Jun 2009; Markus Meier <maekke@gentoo.org> xml2doc-20030510-r1.ebuild:
  amd64/x86 stable, bug #272245

  02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  xml2doc-20030510-r1.ebuild:
  Fix minor issues pointed out by repoman.

  02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  xml2doc-20030510-r1.ebuild:
  Cleanup ebuild and fix build with --as-needed, thanks to Kevin Pyle in bug
  #247001.

*xml2doc-20030510-r1 (14 Mar 2007)

  14 Mar 2007; Leonardo Boshell <leonardop@gentoo.org>
  +files/xml2doc-pointer_fix.patch, +xml2doc-20030510-r1.ebuild:
  Avoid pre-stripping binaries (bug #152266). Added patch to fix a
  pointer-related bug detected thanks to another QA notice.

  13 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml:
  Replacing text-markup herd with the new sgml herd.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  22 Jan 2006; Marius Mauch <genone@gentoo.org> xml2doc-20030510.ebuild:
  Replacing pdflib use flag with pdf use flag

  30 Nov 2005; Tom Gall <tgall@gentoo.org> xml2doc-20030510.ebuild:
  stable on ppc64

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  xml2doc-20030510.ebuild:
  Stable on ppc.
